tarea-grupal/deployment/k8s/app-authors-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-authors
  namespace: calechon-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-authors
  template:
    metadata:
      labels:
        app: app-authors
    spec:
      containers:
        - name: app-authors
          image: xd456/app-authors:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-authors
  namespace: calechon-dev
spec:
  type: ClusterIP
  selector:
    app: app-authors
  ports:
    - port: 8080
      targetPort: 8080
