tarea-grupal/deployment/k8s/app-books-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-books
  namespace: books-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-books
  template:
    metadata:
      labels:
        app: app-books
    spec:
      containers:
        - name: app-books
          image: xd456/app-books:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-books
  namespace: books-app
spec:
  type: ClusterIP
  selector:
    app: app-books
  ports:
    - port: 8080
      targetPort: 8080
