tarea-grupal/deployment/k8s/app-customers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-customers
  namespace: books-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-customers
  template:
    metadata:
      labels:
        app: app-customers
    spec:
      containers:
        - name: app-customers
          image: vinic/app-customers:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-customers
  namespace: books-app
spec:
  type: ClusterIP
  selector:
    app: app-customers
  ports:
    - port: 8080
      targetPort: 8080
