tarea-grupal/deployment/k8s/app-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-web
  namespace: calechon-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-web
  template:
    metadata:
      labels:
        app: app-web
    spec:
      containers:
        - name: app-web
          image: xd456/app-web:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: app-web
  namespace: calechon-dev
spec:
  type: ClusterIP
  selector:
    app: app-web
  ports:
    - port: 80
      targetPort: 8080
