tarea-grupal/deployment/k8s/app-web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-web
  namespace: books-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-web
  template:
    metadata:
      labels:
        app: app-web
    spec:
      containers:
        - name: app-web
          image: vinic/app-web:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-web
  namespace: books-app
spec:
  type: ClusterIP
  selector:
    app: app-web
  ports:
    - port: 80
      targetPort: 80
