tarea-grupal/deployment/k8s/consul-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  namespace: books-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - name: consul
          image: consul:1.15.0
          command: ["/bin/sh","-c"]
          args:
            - |
              exec consul agent \
                -dev \
                -client=0.0.0.0 \
                -bind=0.0.0.0 \
                -ui
          ports:
            - containerPort: 8500
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: consul
  namespace: books-app
  labels:
    app: consul
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8500
      targetPort: 8500
  selector:
    app: consul
